--- a/pages/css/home.css
+++ b/pages/css/home.css
@@ -1,3 +1,5 @@
+/* SHARED */
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -11,6 +13,11 @@ body {
     border-bottom-color: black;
     padding: 5px;
     background-color: darkturquoise;
+}
+
+#hotBar h1{
+    height: min-content;
+    margin: auto 10px auto 10px;
 }
 
 #hotBar *{
@@ -47,7 +54,6 @@ body {
 }
 
 #sideBar #user #username{
-    flex-direction: column;
     padding: 2% 5% 2% 10%;
 }
 
@@ -58,11 +64,13 @@ body {
     font-weight: bold;
 }
 
-.post {
+/* HOME / INDEX */
+
+#feed .post {
     margin: 50px 10% 0px 10%;
 }
 
-.post #top {
+#feed .post #top {
     border-top-style: solid;
     border-right-style: solid;
     border-left-style: solid;
@@ -73,26 +81,25 @@ body {
     background-color: rgb(230, 230, 230);
 }
 
-.post #top img{
+#feed .post #top img{
 
     color: black;
     margin: auto 0 auto 2%;
     border-radius: 60%;
 }
 
-.post #top p{
+#feed .post #top h1{
     margin: auto 0 auto 2%;
-    font-size: 300%;
-    font-weight: bold;
+    font-size: 200%;
 }
 
-.post > img{
+#feed .post > img{
     border: solid black;
     width: 60%;
     height: auto;
 }
 
-.post #bottom {
+#feed .post #bottom {
     border-top-style: solid;
     border-right-style: solid;
     border-bottom-style: solid;
@@ -104,16 +111,161 @@ body {
     padding: 2%;
 }
 
-.post #bottom :nth-child(1) {
+#feed .post #bottom :nth-child(1) {
     display: inline;
     font-weight: bold;
 }
 
-.post #bottom :nth-child(2) {
+#feed .post #bottom :nth-child(2) {
     display: inline;
 }
 
-.post #bottom :nth-child(3) {
+#feed .post #bottom :nth-child(3) {
     margin: 1% 0% 0% 0%;
     font-weight: lighter;
+}
+
+/* PET PROFILE */
+
+#profile {
+    margin: 50px 10% 0px 10%;  
+}
+
+#profile > * {
+    width: 60%;
+    height: auto;
+}
+
+#profile #top {
+    
+    position: relative;
+    display: grid;
+    grid-template-columns: 35% auto auto;
+    grid-template-rows: 35% 15% 50%;
+    border-top-style: solid;
+    border-right-style: solid;
+    border-left-style: solid;
+    border-bottom-style: solid;
+    color: black;
+    background-color: rgb(230, 230, 230);
+    margin-bottom: 3%;
+}
+
+#profile #top #edit{
+
+    position: absolute;
+    top: 0px; 
+    right: 0px;
+}
+
+#profile #top #petpic{
+
+    margin: 10% auto 5% auto;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+}
+
+#profile #top #name{
+
+   margin: auto 0 2% 0;
+   font-size: 200%;
+
+   grid-column: 2 / 4;
+   grid-row: 1 / 2;
+}
+
+#profile #top #followers{
+
+    margin: auto 0 auto 0;
+
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+ }
+
+ #profile #top #following{
+
+    margin: auto 0 auto 0;
+
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+
+ }
+
+#profile #top #bio{
+
+    margin: 5% 5% auto 5%;
+
+    grid-column: 1 / 4;
+    grid-row: 3 / 4;
+}
+
+#profile #listing {
+    border-top-style: solid;
+    border-right-style: solid;
+    border-left-style: solid;
+    border-bottom-style: solid;
+
+    margin-bottom: 3%;
+
+    background-color: rgba(255, 255, 0, 0.61);
+}
+
+#profile #listing p{
+    text-align: center;
+    
+    width: auto;
+    margin: 2%;
+}
+
+#profile #gallery{
+    display: flex;
+    flex-direction: column;
+}
+
+#profile #gallery .row{
+
+    display: grid;
+    grid-template-columns: 30% 30% 30%;
+    grid-template-rows: 30%;
+    grid-column-gap: 5%;
+    margin-bottom: 5%;
+    
+}
+
+#profile #gallery .row *{
+
+    width: 100%;
+    height: auto;
+}
+
+/* ADD PET */
+
+#addPet {
+    margin: 50px 10% 0px 10%;     
+    text-align: center;
+}
+
+#addPet #auxDiv {
+    width: 60%;
+    height: auto;
+
+    border-top-style: solid;
+    border-right-style: solid;
+    border-left-style: solid;
+    border-bottom-style: solid;
+
+    background-color: tomato;
+}
+
+#addPet #newFields {
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
+#addPet #newFields *{
+    margin-bottom: 1%;
 }
