--- a/pages/css/home.css
+++ b/pages/css/home.css
@@ -292,3 +292,105 @@ body {
 #addShelterForm label {
     font-size: 80%;
 }
+
+/* POST */
+
+#post .post {
+    margin: 50px 10% 0px 10%;
+}
+
+#post .post #title {
+    border: solid black;
+    display: flex;
+    width: 60%;
+    height: 100px;
+    background-color: rgb(230, 230, 230);
+}
+
+#post .post #title img{
+
+    color: black;
+    margin: auto 0 auto 2%;
+    border-radius: 60%;
+}
+
+#post .post #title h1{
+    margin: auto 0 auto 2%;
+    font-size: 200%;
+}
+
+#post .post > img{
+    border: solid black;
+    width: 60%;
+    height: auto;
+}
+
+#post .post #description {
+    border: solid black;
+    width: 60%;
+    height: auto;
+    background-color: rgb(230, 230, 230);
+    padding: 2%;
+}
+
+#post .post #description :nth-child(1) {
+    display: inline;
+    font-weight: bold;
+}
+
+#post .post #description :nth-child(2) {
+    display: inline;
+}
+
+#post .post #description :nth-child(3) {
+    display: inline;
+    margin: 0% 0% 0% 10%;
+}
+
+#post .post #description :nth-child(4) {
+    display: inline;
+    margin: 0% 0% 0% 2%;
+}
+
+#post .post #description :nth-child(5) {
+    display: inline;
+    margin: 0% 0% 0% 10%;
+}
+
+#post .post #description :nth-child(6) {
+    display: inline;
+    margin: 0% 0% 0% 2%;
+}
+
+#post .post #description :nth-child(7) {
+    margin: 1% 0% 0% 0%;
+    font-weight: lighter;
+}
+
+#post .post #comments {
+    border: solid rgb(73, 72, 72);
+    width: 40%;
+    height: auto;
+    background-color: rgb(250, 250, 250);
+    padding: 1%;
+}
+
+#post .post #comments #user{
+    display: flex;
+}
+
+#post .post #comments #user img{
+    color: black;
+    margin: auto 5% auto 2%;
+    border-radius: 50%;
+}
+
+#post .post #comments #user #username{
+    padding: 2% 5% 2% 10%;
+    font-weight: bold;
+}
+
+#post .post #comments #user #text{
+    margin: 1px;
+    text-align: center;
+}
