--- a/pages/css/home.css
+++ b/pages/css/home.css
@@ -296,11 +296,14 @@ body {
 /* POST */
 
 #post .post {
-    margin: 50px 10% 0px 10%;
+    margin: 50px 10% 10px 10%;
 }
+
 
 #post .post #title {
     border: solid black;
+    font-size: 150%;
+    font-weight: bold;
     display: flex;
     width: 60%;
     height: 100px;
@@ -314,10 +317,10 @@ body {
     border-radius: 60%;
 }
 
-#post .post #title h1{
+#post .post #title p{
     margin: auto 0 auto 2%;
-    font-size: 200%;
-}
+    font-size: 150%;
+    }
 
 #post .post > img{
     border: solid black;
@@ -326,11 +329,13 @@ body {
 }
 
 #post .post #description {
-    border: solid black;
-    width: 60%;
+    border-right-style: solid;
+    border-left-style: solid;
+    border-bottom-style: solid;
+    width: 58%;
     height: auto;
     background-color: rgb(230, 230, 230);
-    padding: 2%;
+    padding: 1%;
 }
 
 #post .post #description :nth-child(1) {
@@ -344,7 +349,8 @@ body {
 
 #post .post #description :nth-child(3) {
     display: inline;
-    margin: 0% 0% 0% 10%;
+    margin: 1% 0% 0% 45%;
+    size:110%;
 }
 
 #post .post #description :nth-child(4) {
@@ -354,7 +360,7 @@ body {
 
 #post .post #description :nth-child(5) {
     display: inline;
-    margin: 0% 0% 0% 10%;
+    margin: 0% 0% 0% 8%;
 }
 
 #post .post #description :nth-child(6) {
@@ -368,11 +374,13 @@ body {
 }
 
 #post .post #comments {
-    border: solid rgb(73, 72, 72);
-    width: 40%;
+    border-right-style: solid;
+    border-left-style: solid;
+    border-bottom-style: solid;
+    width: 56%;
     height: auto;
     background-color: rgb(250, 250, 250);
-    padding: 1%;
+    padding: 2%;
 }
 
 #post .post #comments #user{
@@ -381,16 +389,16 @@ body {
 
 #post .post #comments #user img{
     color: black;
-    margin: auto 5% auto 2%;
+    margin: 1% 3% 0% 0%;
     border-radius: 50%;
 }
 
 #post .post #comments #user #username{
-    padding: 2% 5% 2% 10%;
+    padding: 1% 3% 0% 1%;
     font-weight: bold;
 }
 
 #post .post #comments #user #text{
-    margin: 1px;
+    padding: 1% 0% 0% 0%;
     text-align: center;
 }
