--- a/pages/css/home.css
+++ b/pages/css/home.css
@@ -402,3 +402,18 @@ body {
     padding: 1% 0% 0% 0%;
     text-align: center;
 }
+
+/* PROPOSAL */
+
+#proposal {
+    margin: 50px 10% 0px 10%;
+    text-align: center;
+}
+
+#proposal #div1 {
+    width: 60%;
+    height: auto;
+    border-style: solid;
+    background-color: rgb(64, 106, 153);
+}
+
