--- a/pages/css/home.css
+++ b/pages/css/home.css
@@ -64,6 +64,10 @@ body {
     font-weight: bold;
 }
 
+a {
+    color: black;
+}
+
 /* HOME / INDEX */
 
 #feed .post {
@@ -214,8 +218,14 @@ body {
     background-color: rgba(255, 255, 0, 0.61);
 }
 
-#profile #listing p{
+#profile #listing #warning{
     text-align: center;
+
+    width: auto;
+    margin: 2%;
+}
+
+#profile #listing p{
 
     width: auto;
     margin: 2%;
@@ -373,7 +383,7 @@ body {
     font-weight: lighter;
 }
 
-#post .post #comments {
+#comments {
     border-right-style: solid;
     border-left-style: solid;
     border-bottom-style: solid;
@@ -383,24 +393,186 @@ body {
     padding: 2%;
 }
 
-#post .post #comments #user{
+#comments .comment{
     display: flex;
 }
 
-#post .post #comments #user img{
+#comments .comment img{
     color: black;
     margin: 1% 3% 0% 0%;
     border-radius: 50%;
 }
 
-#post .post #comments #user #username{
+#comments .comment #username{
     padding: 1% 3% 0% 1%;
     font-weight: bold;
 }
 
-#post .post #comments #user #text{
+#comments .comment #text{
     padding: 1% 0% 0% 0%;
     text-align: center;
+}
+
+#comments #postComment{
+
+    text-align: center;
+    margin-top: 3%;
+}
+
+#comments #postComment #commentText{
+
+    width: 80%;
+}
+
+/* LISTING */
+
+
+#profile #listing{
+    padding: 2% 0px 0px 0px;
+}
+
+#profile #listing > p{
+    text-align: center;
+}
+
+#profile #listing > ul{
+    text-align: center;
+    list-style-position: inside;
+    padding-right: 10%;
+}
+
+#profile #listing #comments {
+    border-top-style: solid;
+    border-right-style: solid;
+    border-left-style: solid;
+    border-bottom-style: solid;
+    width: 80%;
+    height: auto;
+    background-color: rgb(250, 250, 250);
+    padding: 2%;
+    margin: 5% auto 5% auto;
+}
+
+#profile #listing #inquiry{
+
+    text-align: center;
+    border-top-style: solid;
+    border-right-style: solid;
+    border-left-style: solid;
+    border-bottom-style: solid;
+    width: 84%;
+    height: auto;
+    background-color: rgba(79, 255, 35, 0.747);
+    
+    margin: 5% auto 5% auto;
+}
+
+#profile #listing #proposal{
+
+    text-align: center;
+    border-top-style: solid;
+    border-right-style: solid;
+    border-left-style: solid;
+    border-bottom-style: solid;
+    width: 84%;
+    height: auto;
+    background-color: rgba(255, 152, 35, 0.747);
+    
+    margin: 5% auto 5% auto;
+}
+
+/* INQUIRY */
+
+#inquiry {
+    margin: 50px 10% 0px 10%;
+}
+
+#inquiry > *{
+    width: 60%;
+}
+
+#inquiry #top{
+    border-top-style: solid;
+    border-right-style: solid;
+    border-left-style: solid;
+    border-bottom-style: solid;
+}
+
+#inquiry #top h1{
+    margin-left: 5%;
+}
+
+#inquiry #chat{
+    margin-top: 0px;
+    border-top-style: solid;
+    border-top-width: 1px;
+    border-right-style: solid;
+    border-left-style: solid;
+    border-bottom-style: solid;
+    background-color: lavender;
+    min-height: 200px;
+}
+
+#inquiry .message_owner {
+
+    display: flex;
+    margin: 2%
+}
+
+#inquiry .message_owner #messageBox{
+
+    background-color: white;
+    width: 50%;
+    height: fit-content;
+    border-top-style: solid;
+    border-right-style: solid;
+    border-left-style: solid;
+    border-bottom-style: solid;
+    border-radius: 25px;
+    margin: auto 0% auto 0%;
+    
+}
+
+#inquiry .message_owner img{
+    color: black;
+    margin: 1% 3% 0% 0%;
+    border-radius: 50%;
+
+}
+
+
+
+#inquiry .message_user {
+    
+
+    background-color: white;
+    width: 50%;
+    height: fit-content;
+    border-top-style: solid;
+    border-right-style: solid;
+    border-left-style: solid;
+    border-bottom-style: solid;
+    border-radius: 25px;
+    margin: 2% 2% 2% auto;
+}
+
+#inquiry p{
+    text-align: center;
+    margin: 2%
+}
+
+#inquiry #sendMessage {
+    
+    border-right-style: solid;
+    border-left-style: solid;
+    border-bottom-style: solid;
+}
+
+#inquiry #sendMessage #messageText {
+    
+    height: 60%;
+    width: 80%;
+    margin:2% 3% 2% 3%;
 }
 
 /* PROPOSAL */
@@ -416,4 +588,3 @@ body {
     border-style: solid;
     background-color: rgb(64, 106, 153);
 }
-
