--- a/pages/css/home.css
+++ b/pages/css/home.css
@@ -616,3 +616,35 @@ a {
     display: grid;
     grid-template-columns: auto 35px;
 }
+
+/* SEARCH_PAGE */
+#search #searchBar {
+    margin: 50px 10% 10px 10%;
+    position: relative;
+}
+
+
+#search #searchBar #input {  
+    width: 10%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+
+    background-color: white;
+    background-position: 10px 10px;
+    background-repeat: no-repeat;
+    padding-left: 40px;
+    transition: width 0.4s ease-in-out;
+}
+
+#search #searchBar #input:focus {
+    width: 60%;
+    border: 3px solid #555;
+}
+
+#search #searchBar img {
+    position: absolute;
+    top: 25%;
+    left: 0.5%;
+}
+
