--- a/pages/css/home.css
+++ b/pages/css/home.css
@@ -322,6 +322,7 @@ a {
 
 #post .post {
     margin: 50px 10% 10px 10%;
+    
 }
 
 #post a{
@@ -333,6 +334,8 @@ a {
 }
 
 #post .post #title {
+    
+    position: relative;
     border: solid black;
     font-size: 150%;
     font-weight: bold;
@@ -342,7 +345,7 @@ a {
     background-color: rgb(230, 230, 230);
 }
 
-#post .post #title img{
+#post .post #title #pet_profile_pic{
 
     color: black;
     margin: auto 0 auto 2%;
@@ -353,6 +356,12 @@ a {
     margin: auto 0 auto 2%;
     font-size: 150%;
     width: 100%;
+}
+
+#post .post #title #edit{
+    position: absolute;
+    top: 30%;
+    right: 4%;
 }
 
 #post .post > img{
@@ -706,5 +715,100 @@ a {
     position: absolute;
     top: 25%;
     left: 0.5%;
+}
+
+/* EDIT PROFILE*/
+
+#edit_post .post {
+    margin: 50px 10% 10px 10%;
+    
+}
+
+#edit_post a{
+    margin: auto 0 auto 2%;
+}
+
+#edit_post #description a{
+    margin: auto 0 auto 0;
+}
+
+#edit_post .post #title {
+    
+    position: relative;
+    border: solid black;
+    font-size: 150%;
+    font-weight: bold;
+    display: flex;
+    width: 60%;
+    height: 100px;
+    background-color: rgb(230, 230, 230);
+}
+
+#edit_post .post #title #pet_profile_pic{
+
+    color: black;
+    margin: auto 0 auto 2%;
+    border-radius: 60%;
+}
+
+#edit_post .post #title p{
+    margin: auto 0 auto 2%;
+    font-size: 150%;
+    width: 100%;
+}
+
+#edit_post .post #title #edit{
+    position: absolute;
+    top: 30%;
+    right: 4%;
+}
+
+#edit_post .post > img{
+    border: solid black;
+    width: 60%;
+    height: auto;
+}
+
+#edit_post .post #description {
+    border-right-style: solid;
+    border-left-style: solid;
+    border-bottom-style: solid;
+    width: 58%;
+    height: auto;
+    background-color: rgb(230, 230, 230);
+    padding: 1%;
+}
+
+#edit_post .post #description :nth-child(1) {
+    display: inline;
+    font-weight: bold;
+}
+
+#edit_post .post #description #updateDescription{
+    display: inline;
+    
+}
+
+#edit_post .post #description #updateDescription #commentText{
+    font-weight: normal;
+    width: 50%;
+    margin-left: 2%;
+    margin-right: 2%;
+}
+
+#edit_post .post #description :nth-child(3) {
+    display: inline;
+}
+
+#edit_post .post #deleteButton {
+
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336;
+    border: none;
+    cursor: pointer;
+    color: white;
+    margin-top: 2%;
+    margin-left: 23%;
 }
 
