--- a/pages/css/home.css
+++ b/pages/css/home.css
@@ -176,12 +176,30 @@ a {
     margin-bottom: 3%;
 }
 
+#profile #top #fav{
+
+    position: absolute;
+    top: 5%;
+    right: 3%;
+    cursor: pointer;
+}
+
 #profile #top #edit{
 
     position: absolute;
-    top: 0px;
-    right: 0px;
+    top: 4%;
+    right: 12%;
+    cursor: pointer;
 }
+
+#profile #top #postpic{
+
+    position: absolute;
+    top: 5%;
+    right: 22%;
+    cursor: pointer;
+}
+
 
 #profile #top #petpic{
 
@@ -196,7 +214,7 @@ a {
 
 #profile #top #name{
 
-    margin: auto 0 2% 0;
+    margin: 5% 0 2% 0;
     font-size: 200%;
  
     grid-column: 2 / 4;
@@ -221,7 +239,7 @@ a {
  
  #profile #top #bio{
  
-     margin: 5% 5% auto 5%;
+     margin: 7% 5% auto 5%;
  
      grid-column: 1 / 4;
      grid-row: 3 / 4;
@@ -642,8 +660,12 @@ a {
 
 #proposal {
     margin: 50px 10% 0px 10%;
-    text-align: center;
-    
+    text-align: center; 
+}
+
+#proposal h2{
+    color: rgba(255, 255, 255, 0.904);
+    text-shadow: 2px 2px #0000006b;
 }
 
 #proposal #div1 {
@@ -812,3 +834,289 @@ a {
     margin-left: 23%;
 }
 
+/* EDIT PET PROFILE */
+
+#edit_pet_profile {
+    margin: 50px 10% 0px 10%;
+}
+
+#edit_pet_profile > * {
+    width: 60%;
+    height: auto;
+}
+
+#edit_pet_profile #top {
+
+    position: relative;
+    display: grid;
+    grid-template-columns: 35% auto auto;
+    grid-template-rows: 35% 15% 50%;
+    border-top-style: solid;
+    border-right-style: solid;
+    border-left-style: solid;
+    border-bottom-style: solid;
+    color: black;
+    background-color: rgb(230, 230, 230);
+    margin-bottom: 3%;
+}
+
+#edit_pet_profile #top #petpic{
+
+    margin: 10% auto 5% auto;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    z-index: 1;
+}
+
+#edit_pet_profile #top #changepic{
+
+    position: absolute;
+    top: 5%;
+    left: 20%;
+    z-index: 2;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+
+#edit_pet_profile #top #nameText{
+
+    margin: auto 0 2% 0;
+    font-size: 200%;
+    width: 80%;
+ 
+    grid-column: 2 / 4;
+    grid-row: 1 / 2;
+ }
+ 
+ #edit_pet_profile #top #followers{
+ 
+     margin: 5% 0 auto 0;
+ 
+     grid-column: 2 / 3;
+     grid-row: 2 / 3;
+  }
+ 
+  #edit_pet_profile #top #following{
+ 
+     margin: 5% 0 auto 0;
+ 
+     grid-column: 3 / 4;
+     grid-row: 2 / 3;
+  }
+ 
+ #edit_pet_profile #top #bioText{
+ 
+     margin: 7% 5% auto 5%;
+
+     grid-column: 1 / 4;
+     grid-row: 3 / 4;
+ }
+
+#edit_pet_profile #listing {
+    border-top-style: solid;
+    border-right-style: solid;
+    border-left-style: solid;
+    border-bottom-style: solid;
+
+    margin-bottom: 1%;
+
+    background-color: rgba(255, 255, 0, 0.61);
+}
+
+#edit_pet_profile #listing #warning{
+    text-align: center;
+
+    width: auto;
+    margin: 2%;
+}
+
+#edit_pet_profile #removeListing {
+
+    width: auto;
+    padding: 10px 18px;
+    background-color: #e46e00;
+    border: none;
+    cursor: pointer;
+    color: white;
+    margin-top: 0%;
+    margin-left: 23%;
+}
+
+#edit_pet_profile #updateInfoForm {
+
+    display: inline;
+}
+
+#edit_pet_profile #updateInfo {
+
+    display: inline;
+    width: auto;
+    padding: 10px 18px;
+    background-color:#4CAF50;
+    border: none;
+    cursor: pointer;
+    color: white;
+    margin-top: 5%;
+    margin-left: 18%;
+}
+
+#edit_pet_profile #deletePet {
+
+    display: inline;
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336;
+    border: none;
+    cursor: pointer;
+    color: white;
+    margin-top: 2%;
+    margin-left: 2%;
+}
+
+
+/* OWNER INQUIRIES POV */
+
+#inquiry_list {
+    margin: 50px 10% 0px 10%;
+}
+
+#inquiry_list > *{
+    width: 60%;
+}
+
+#inquiry_list #top{
+    border-top-style: solid;
+    border-right-style: solid;
+    border-left-style: solid;
+    border-bottom-style: solid;
+}
+
+#inquiry_list #top h1{
+    margin-left: 5%;
+}
+
+#inquiry_list #list .conversation{
+    width: 100%;
+    display: flex;
+    border-right-style: solid;
+    border-left-style: solid;
+    border-bottom-style: solid;
+    background-color: lavender;
+}
+
+#inquiry_list #list .conversation img{
+
+    border-radius: 50%;
+    margin: 2%;
+}
+
+#inquiry_list #list .conversation #username{
+    margin: auto 1% auto 0%;
+    font-weight: bold;
+}
+
+#inquiry_list #list .conversation #username::after{
+    content: ": ";
+}
+
+#inquiry_list #list .conversation #lastMessage{
+    margin: auto 1% auto 0%;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+/* OWNER PROPOSALS POV */
+
+#proposal_list {
+    margin: 50px 10% 0px 10%;
+}
+
+#proposal_list > *{
+    width: 60%;
+}
+
+#proposal_list #top{
+    color: rgba(255, 255, 255, 0.904);
+    text-shadow: 2px 2px #0000006b;
+    background-color:  rgb(64, 106, 153);
+    border-top-style: solid;
+    border-right-style: solid;
+    border-left-style: solid;
+    border-bottom-style: solid;
+    border-color: black;
+}
+
+#proposal_list #top h1{
+    margin-left: 5%;
+}
+
+#proposal_list #list .proposal{
+    width: 100%;
+    border-right-style: solid;
+    border-left-style: solid;
+    border-bottom-style: solid;
+    background-color: lavender;
+}
+
+#proposal_list #list .proposal #content{
+    display: flex;
+}
+
+#proposal_list #list .proposal img{
+
+    border-radius: 50%;
+    margin: 2%;
+}
+
+#proposal_list #list .proposal #username{
+    margin: 3% 1% auto 0%;
+    font-weight: bold;
+}
+
+#proposal_list #list .proposal #username::after{
+    content: ": ";
+}
+
+#proposal_list #list .proposal #proposalMessage{
+    margin: 3%;
+}
+
+#proposal_list #list .proposal #confirmDeny{
+    margin-left: 50%;
+}
+
+#proposal_list #list .proposal *{
+    cursor: pointer;
+}
+
+/* MAKE POST */
+
+#make_post {
+    margin: 50px 10% 0px 10%;
+    text-align: center;
+}
+
+#make_post #auxDiv {
+    width: 60%;
+    height: auto;
+
+    border-top-style: solid;
+    border-right-style: solid;
+    border-left-style: solid;
+    border-bottom-style: solid;
+
+    background-color: tomato;
+}
+
+#make_post #auxDiv > *{
+    margin: 5%;
+}
+
+#make_post #auxDiv #descriptionForm #description {
+    width: 80%;
+}
