--- a/pages/css/home.css
+++ b/pages/css/home.css
@@ -1105,12 +1105,12 @@ a {
 
 /* MAKE POST */
 
-#make_post {
+#add_post {
     margin: 50px 10% 0px 10%;
     text-align: center;
 }
 
-#make_post #auxDiv {
+#add_post #auxDiv {
     width: 60%;
     height: auto;
 
@@ -1122,10 +1122,10 @@ a {
     background-color: tomato;
 }
 
-#make_post #auxDiv > *{
+#add_post #auxDiv > *{
     margin: 5%;
 }
 
-#make_post #auxDiv #descriptionForm #description {
+#add_post #auxDiv #descriptionForm #description {
     width: 80%;
 }
