--- a/pages/css/home.css
+++ b/pages/css/home.css
@@ -304,6 +304,17 @@ a {
     background-color: tomato;
 }
 
+#addPet #auxDiv #addPetForm #input{
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+
+#addPet #auxDiv #selectedImage{
+    width: 60%;
+    height: auto;
+
+}
+
 #addPet #newFields {
     margin-top: 3%;
     margin-bottom: 3%;
@@ -312,6 +323,7 @@ a {
 #addPet #newFields *{
     margin-bottom: 1%;
 }
+
 
 /* ADD SHELTER */
 
@@ -776,6 +788,23 @@ a {
     border-left-style: solid;
     border-top-style: solid;
     border-bottom-style: solid; 
+    color: black;
+    display: flex;
+    
+    height: 100px;
+    background-color: rgb(230, 230, 230);
+}
+
+#search #searchResults .petResult img{
+
+    color: black;
+    margin: auto 0 auto 2%;
+    border-radius: 60%;
+}
+
+#search #searchResults .petResult h1{
+    margin: auto 0 auto 2%;
+    font-size: 200%;
 }
 
 #search #noResults {
