--- a/pages/css/home.css
+++ b/pages/css/home.css
@@ -581,7 +581,7 @@ a {
 }
 
 #inquiry > *{
-    width: 60%;
+    width: 50%;
 }
 
 #inquiry #top{
@@ -606,61 +606,69 @@ a {
     min-height: 200px;
 }
 
-#inquiry #chat .message_owner {
- 
-    margin: 2%;
-    align-items:right;
-    display: flex;
-}
-#inquiry #chat .message_user {
+#inquiry .message_owner {
 
     display: flex;
-    margin: 2%;
-    
+    margin: 2%
 }
+
+#inquiry .message_user {
+
+    display: flex;
+    margin: 2%
+}
+
 #inquiry .message_owner #messageBox{
-
     background-color: white;
-    width: 90%;
+    width: fit-content;
+    min-width: 8%;
+    max-width: 60%;
+    padding: 0% 1% 0% 1%;
     height: fit-content;
     border-top-style: solid;
     border-right-style: solid;
     border-left-style: solid;
     border-bottom-style: solid;
     border-radius: 25px;
-    margin: 2% 0% auto 0%;
+    margin: auto 0% auto 0%;
+    word-wrap: break-word;
 
 }
 
 #inquiry .message_owner img{
     color: black;
-    margin: 2% 0% 0% 3%;
+    margin: 1% 3% 0% 0%;
     border-radius: 50%;
+
 }
 
 #inquiry .message_user img{
     color: black;
-    margin: 2% 3% 0% 0%;
+    margin: 1.5% 3% 0% 0%;
     border-radius: 50%;
 
 }
 
 
+
 #inquiry .message_user #messageBox{
     background-color: white;
-    width: 90%;
+    width: fit-content;
+    min-width: 8%;
+    max-width: 60%;
+    padding: 0% 1% 0% 1%;
     height: fit-content;
     border-top-style: solid;
     border-right-style: solid;
     border-left-style: solid;
     border-bottom-style: solid;
     border-radius: 25px;
-    margin: 2% 0% auto 0%;
+    margin: 2% 2% 2% auto;
+    word-wrap: break-word;
 }
 
 #inquiry p{
     text-align: center;
-    margin: 2%
 }
 
 
@@ -670,6 +678,7 @@ a {
     width: 80%;
     margin:2% 3% 2% 3%;
 }
+
 
 /* PROPOSAL */
 
