--- a/pages/css/home.css
+++ b/pages/css/home.css
@@ -496,7 +496,14 @@ a {
 
 
 #profile #listing{
+    position: relative;
     padding: 2% 0px 0px 0px;
+}
+
+#profile #listing #edit{
+    position: absolute;
+    top: 4%;
+    right: 4%;
 }
 
 #profile #listing > p{
@@ -1227,4 +1234,48 @@ a {
     width: 60%;
     height: auto;
 
+}
+
+/* EDIT LISTING */
+
+#edit_listing {
+    margin: 50px 10% 0px 10%;
+}
+
+#edit_listing #auxDiv{
+
+    width: 60%;
+
+    border-top-style: solid;
+    border-right-style: solid;
+    border-left-style: solid;
+    border-bottom-style: solid;
+
+    margin-bottom: 3%;
+
+    padding-top: 2%;
+    padding-bottom: 2%;
+
+    background-color: rgba(255, 255, 0, 0.61);
+}
+
+#edit_listing #auxDiv p {
+    text-align: center;
+}
+
+#edit_listing #auxDiv > * {
+    text-align: center;
+    width: 80%;
+    margin: 2% 0 2% 10%;
+}
+
+#edit_listing #updateInfo { 
+
+    width: auto;
+    padding: 10px 18px;
+    background-color:#4CAF50;
+    border: none;
+    cursor: pointer;
+    color: white;
+    margin-left: 26%;
 }
