--- a/pages/css/home.css
+++ b/pages/css/home.css
@@ -171,7 +171,7 @@ a {
     position: relative;
     display: grid;
     grid-template-columns: 35% auto auto;
-    grid-template-rows: 35% 15% 50%;
+    grid-template-rows: 35% 15% 15% 35%;
     border-top-style: solid;
     border-right-style: solid;
     border-left-style: solid;
@@ -214,7 +214,7 @@ a {
     border-radius: 50%;
 
     grid-column: 1 / 2;
-    grid-row: 1 / 3;
+    grid-row: 1 / 4;
 }
 
 #profile #top #name{
@@ -224,30 +224,38 @@ a {
 
     grid-column: 2 / 4;
     grid-row: 1 / 2;
- }
+}
 
  #profile #top #followers{
 
      margin: 5% 0 auto 0;
 
+     grid-column: 2 / 4;
+     grid-row: 2 / 3;
+}
+
+  #profile #top #colour{
+
+    
+
      grid-column: 2 / 3;
-     grid-row: 2 / 3;
-  }
+     grid-row: 3 / 4;
+}
 
-  #profile #top #following{
+#profile #top #size{
 
-     margin: 5% 0 auto 0;
+    
 
-     grid-column: 3 / 4;
-     grid-row: 2 / 3;
-  }
+    grid-column: 3 / 4;
+    grid-row: 3 / 4;
+}
 
  #profile #top #bio{
 
      margin: 7% 5% auto 5%;
 
      grid-column: 1 / 4;
-     grid-row: 3 / 4;
+     grid-row: 4 / 5;
  }
 
 
